trunk/tests/jastadd/negative/name_errors/L1/3_MultipleDeclarations2.ob
MODULE TestModule;
	TYPE a = INTEGER;
	VAR a : INTEGER;
END TestModule.
